--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ol>
 
     <ul>
-        <li>Venom-<a href="https://venom.com">Venoom</a></li>
+        <li>Venom-<a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D0%BD%D0%BE%D0%BC">Venoom</a></li>
         <li>Venaam</li>
     </ul>
 </body>
